# MidiInterpolator

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: build_and_release.yml
src/: editor.rs  lib.rs
src/gui/: mod.rs  param_slider_knob.rs
