[package]
name = "midiinterpolator"
version = "1.0.0"
edition = "2021"
authors = ["Leon Focker <contact@leonfocker.de>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "interpolate between two midi channels"

[workspace]
members = ["xtask", "."]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "d64b2ab9cfb94773c5ee4d0e72aef5921ee95d2d", package = "nih_plug_vizia" }
vizia_plug = { git = "https://github.com/vizia/vizia-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
